--- a/assets/sass/pages/home/feature-block-1.scss
+++ b/assets/sass/pages/home/feature-block-1.scss
@@ -3,6 +3,7 @@
 *****************************************/
 
   section#feature-block-1 {
+    overflow: hidden;
 
     .feature-block-1-wrapper {
       position: relative;
