--- a/assets/sass/pages/home/feature-block-2.scss
+++ b/assets/sass/pages/home/feature-block-2.scss
@@ -3,6 +3,7 @@
 *****************************************/
 
   section#feature-block-2 {
+    overflow: hidden;
 
     .feature-block-2-wrapper {
       position: relative;
